--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,6 @@
-<p>user-detail works!</p>
+<div *ngIf="user">
+  <img [src]="user.avatar" width="100" />
+  <h3>{{ user.first_name }} {{ user.last_name }}</h3>
+  <p>Email: {{ user.email }}</p>
+  <a [routerLink]="['/']"> უკან დაბრუნება </a>
+</div>
