--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,1 +1,5 @@
-<p>user-list works!</p>
+<div *ngFor="let user of users" class="user-card" (click)="goToUserDetail(user.id)">
+  <img [src]="user.avatar" />
+  <p><strong>{{ user.first_name }} {{ user.last_name }}</strong></p>
+  <p class="email">{{ user.email }}</p>
+</div>
